Ja/move api clients to docstrings (#227)
* Refactor to get metadata to client rendering

* Updated to have inline help. Need to update to contain apifamily

* Updated to remove need for apiclients.md

* Added package-lock

* Updated to add usage with auth, not this only demonstrates usage with shopper auth

* Removed troubleshooting code

* Removed apiclients from readme, and apiclients files

* Update packages/generator/src/renderer.ts

Co-authored-by: Will Harney <62956339+wjhsf@users.noreply.github.com>

* packages/generator/index.js

* Will this fix snyk?]

* Updated package.json to remove js-yaml

* Recreated package-lock.json files to try and make snyk happy

Co-authored-by: Will Harney <62956339+wjhsf@users.noreply.github.com>

--- a/packages/generator/templates/ClientInstance.ts.hbs
+++ b/packages/generator/templates/ClientInstance.ts.hbs
@@ -9,18 +9,45 @@ import {
         {{getValue name}}T,
     {{/if}}
 {{/each}}
-} from "./{{apiSpec}}.types";
+} from "./{{metadata.specName}}.types";
 
 /**
-* Instantiate a Client object with desired ClientConfig to perform operations
-* available in this API client.
+* [{{{metadata.name}}}](https://developer.commercecloud.com/s/api-details/{{{getObjectIdByAssetId metadata.assetId}}})
+* ==================================
+* *{{metadata.description}}*<br />
 *
-* Note: When performing operations that require ShopperJWT authentication, an
-* Authorization header containing a JWT can be added to the headers field of the
-* ClientConfig object. The Client will use that Authorization header for all the
-* operations it is used to perform.
+* Simple example:
+*
+* ```typescript
+*   import { {{pascalcase metadata.categories.[CC API Family].[0]}}, ClientConfig } from "commerce-sdk";
+*   // or
+*   const { {{pascalcase metadata.categories.[CC API Family].[0]}}, ClientConfig } = require("commerce-sdk");
+*
+*   const clientConfig: ClientConfig = { ... };
+*   const {{metadata.specName}}Client = new {{pascalcase metadata.categories.[CC API Family].[0]}}.{{capitalize metadata.specName}}(clientConfig);
+* ```
+*
+* Example with shopper auth
+* ```typescript
+* const clientConfig: ClientConfig = {
+*   parameters: {
+*     clientId: "XXXXXX",
+*     organizationId: "XXXX",
+*     shortCode: "XXX",
+*     siteId: "XX"
+*   }
+* };
+* token = await helpers.getShopperToken(clientConfig, { type: "guest" });
+* clientConfig.headers["authorization"] = token.getBearerHeader();
+* const {{metadata.specName}}Client = new {{pascalcase metadata.categories.[CC API Family].[0]}}.{{capitalize metadata.specName}}(clientConfig);
+* ```
+*
+* <span style="font-size:.7em; display:block; text-align: right">
+* API Version: {{metadata.version}}<br />
+* Last Updated: {{metadata.updatedDate}}<br />  
+* </span>
 */
-class {{capitalize apiSpec}} extends BaseClient {
+class {{capitalize metadata.specName}} extends BaseClient {
   constructor(config: ClientConfig) {
     super(config);
 
@@ -35,7 +62,7 @@ class {{capitalize apiSpec}} extends BaseClient {
 }
 
 // eslint-disable-next-line @typescript-eslint/no-namespace
-declare module {{capitalize apiSpec}} {
+declare module {{capitalize metadata.specName}} {
   {{#each dataTypes}}
       {{#if (isTypeDefinition .)}}
          export type {{getValue name}}={{getValue name}}T
@@ -43,4 +70,4 @@ declare module {{capitalize apiSpec}} {
   {{/each}}
 }
 
-export = {{capitalize apiSpec}}
+export = {{capitalize metadata.specName}}
