Use new names of raml-toolkit handlebarsAmfHelpers

--- a/templates/ClientInstance.ts.hbs
+++ b/templates/ClientInstance.ts.hbs
@@ -46,7 +46,7 @@ class {{capitalize metadata.specName}} extends BaseClient {
     super(config);
 
     if (!!!config.baseUri) {
-      this.clientConfig.baseUri = "{{getBaseUri apiModel}}";
+      this.clientConfig.baseUri = "{{getBaseUriFromDocument apiModel}}";
     }
 
   }
