--- a/templates/dtoPartial.ts.hbs
+++ b/templates/dtoPartial.ts.hbs
@@ -1,9 +1,9 @@
 {
 {{#each (getProperties typeDto)}}
 {{#if (isRequiredProperty .)}}
-    {{{getValue name}}}: {{#or (eq (getPropertyDataType .) "object")}}{{> dtoPartial typeDto=range }}{{else}}{{{getPropertyDataType .}}}{{/or}};
+    {{{getValue name}}}: {{#or (eq (getTypeFromProperty .) "object")}}{{> dtoPartial typeDto=range }}{{else}}{{{getTypeFromProperty .}}}{{/or}};
 {{else if (isOptionalProperty .)}}
-    {{{getValue name}}}?: {{#or (eq (getPropertyDataType .) "object")}}{{> dtoPartial typeDto=range }}{{else}}{{{getPropertyDataType .}}}{{/or}};
+    {{{getValue name}}}?: {{#or (eq (getTypeFromProperty .) "object")}}{{> dtoPartial typeDto=range }}{{else}}{{{getTypeFromProperty .}}}{{/or}};
 {{/if}}
 {{/each}}
 }
