--- a/templates/apiFamily.ts.hbs
+++ b/templates/apiFamily.ts.hbs
@@ -1,9 +1,12 @@
 {{#each apiNamesInFamily}}
-import {{capitalize .}} from "./{{.}}/{{.}}";
+import { {{capitalize .}} } from "./{{.}}/{{.}}";
+
 {{/each}}
 export {
 {{#each apiNamesInFamily}}
     {{capitalize .}}{{#unless @last}},{{/unless}}
 {{/each}}
 }
+
+
 
