--- a/templates/operations.ts.hbs
+++ b/templates/operations.ts.hbs
@@ -1,4 +1,4 @@
-{{#each model.encodes.endPoints}}
+{{#each apiModel.encodes.endPoints}}
   {{#each operations}}
     /**
     * {{{ formatForTsDoc description }}}
@@ -19,7 +19,7 @@
     * @param body - The data to send as the request body.
     {{/or}}
     *
-    * @returns A promise of type {{addNamespace (getReturnPayloadType .) "types"}}.
+    * @returns A promise of type {{addNamespace (getReturnPayloadType .) (capitalize @root.metadata.specName)}}.
     */
     {{name}}(
       options{{#or (is method "get") (is method "delete")}}?{{/or}}: {
@@ -34,9 +34,9 @@
         },
         retrySettings?: OperationOptions,
         headers?: { [key: string]: string }{{#or (is method "patch") (is method "post") (is method "put")}},
-        body: {{{addNamespace (getRequestPayloadType request) "types"}}}{{/or}}
+        body: {{{addNamespace (getRequestPayloadType request) (capitalize @root.metadata.specName)}}}{{/or}}
       }
-    ): Promise<{{addNamespace (getReturnPayloadType .) "types"}}>;
+    ): Promise<{{addNamespace (getReturnPayloadType .) (capitalize @root.metadata.specName)}}>;
 
     /**
     * {{{ formatForTsDoc description }}}
@@ -56,7 +56,7 @@
     {{/or}}
     * @param rawResponse - Set to true to return entire Response object instead of DTO.
     *
-    * @returns A promise of type Response if rawResponse is true, a promise of type {{addNamespace (getReturnPayloadType .) "types"}} otherwise.
+    * @returns A promise of type Response if rawResponse is true, a promise of type {{addNamespace (getReturnPayloadType .) (capitalize @root.metadata.specName)}} otherwise.
     */
     {{name}}<T extends boolean>(
       options{{#or (is method "get") (is method "delete")}}?{{/or}}: {
@@ -71,10 +71,10 @@
         },
         retrySettings?: OperationOptions,
         headers?: { [key: string]: string }{{#or (is method "patch") (is method "post") (is method "put")}}, 
-        body: {{{addNamespace (getRequestPayloadType request) "types"}}}{{/or}}
+        body: {{{addNamespace (getRequestPayloadType request) (capitalize @root.metadata.specName)}}}{{/or}}
       },
       rawResponse?: T
-    ): Promise<T extends true ? Response : {{addNamespace (getReturnPayloadType .) "types"}}>;
+    ): Promise<T extends true ? Response : {{addNamespace (getReturnPayloadType .) (capitalize @root.metadata.specName)}}>;
 
     /**
     * {{{ formatForTsDoc description }}}
@@ -94,7 +94,7 @@
     {{/or}}
     * @param rawResponse - Set to true to return entire Response object instead of DTO.
     *
-    * @returns A promise of type Response if rawResponse is true, a promise of type {{addNamespace (getReturnPayloadType .) "types"}} otherwise.
+    * @returns A promise of type Response if rawResponse is true, a promise of type {{addNamespace (getReturnPayloadType .) (capitalize @root.metadata.specName)}} otherwise.
     */
     {{name}}(
       options{{#or (is method "get") (is method "delete")}}?{{/or}}: {
@@ -109,10 +109,10 @@
         },
         retrySettings?: OperationOptions,
         headers?: { [key: string]: string }{{#or (is method "patch") (is method "post") (is method "put")}}, 
-        body: {{{addNamespace (getRequestPayloadType request) "types"}}}{{/or}}
+        body: {{{addNamespace (getRequestPayloadType request) (capitalize @root.metadata.specName)}}}{{/or}}
       },
       rawResponse?: boolean,
-    ): Promise<Response | {{addNamespace (getReturnPayloadType .) "types"}}> {
+    ): Promise<Response | {{addNamespace (getReturnPayloadType .) (capitalize @root.metadata.specName)}}> {
     
       const parameters = (options && options.parameters) ? options.parameters : {};
       
