Commit for GA release

--- a/templates/operations.ts.hbs
+++ b/templates/operations.ts.hbs
@@ -1,7 +1,7 @@
 {{#each apiModel.encodes.endPoints}}
   {{#each operations}}
     /**
-    * {{{ formatForTsDoc description }}}
+    * {{{formatForTsDoc description}}}
     * 
     * If you would like to get a raw Response object use the other {{name}} function.
     * 
@@ -20,6 +20,9 @@
     {{/or}}
     *
     * @returns A promise of type {{addNamespace (getReturnPayloadType .) (capitalize @root.metadata.specName)}}.
+    * {{#if (eq (lowercase @root.metadata.categories.[CC Version Status].[0]) "beta")}}
+    * @beta
+    * {{/if}}
     */
     {{name}}(
       options{{#or (is method "get") (is method "delete")}}?{{/or}}: {
@@ -39,7 +42,7 @@
     ): Promise<{{addNamespace (getReturnPayloadType .) (capitalize @root.metadata.specName)}}>;
 
     /**
-    * {{{ formatForTsDoc description }}}
+    * {{{formatForTsDoc description}}}
     *
     * @param options - An object containing the options for this method.
     * @param parameters - An object containing the parameters for this method.
@@ -57,6 +60,9 @@
     * @param rawResponse - Set to true to return entire Response object instead of DTO.
     *
     * @returns A promise of type Response if rawResponse is true, a promise of type {{addNamespace (getReturnPayloadType .) (capitalize @root.metadata.specName)}} otherwise.
+    * {{#if (eq (lowercase @root.metadata.categories.[CC Version Status].[0]) "beta")}}
+    * @beta
+    * {{/if}}
     */
     {{name}}<T extends boolean>(
       options{{#or (is method "get") (is method "delete")}}?{{/or}}: {
@@ -77,7 +83,7 @@
     ): Promise<T extends true ? Response : {{addNamespace (getReturnPayloadType .) (capitalize @root.metadata.specName)}}>;
 
     /**
-    * {{{ formatForTsDoc description }}}
+    * {{{formatForTsDoc description}}}
     *
     * @param options - An object containing the options for this method.
     * @param parameters - An object containing the parameters for this method.
@@ -95,6 +101,9 @@
     * @param rawResponse - Set to true to return entire Response object instead of DTO.
     *
     * @returns A promise of type Response if rawResponse is true, a promise of type {{addNamespace (getReturnPayloadType .) (capitalize @root.metadata.specName)}} otherwise.
+    * {{#if (eq (lowercase @root.metadata.categories.[CC Version Status].[0]) "beta")}}
+    * @beta
+    * {{/if}}
     */
     {{name}}(
       options{{#or (is method "get") (is method "delete")}}?{{/or}}: {
