Use new names of raml-toolkit handlebarsAmfHelpers (#243)
* Use new names of raml-toolkit handlebarsAmfHelpers

* Use latest raml-toolkit.

* fix typo

* Remove soon-to-be-obsolete test file.

* Remove unused sinon.

* Remove soon-to-be-obsolete files.

Co-authored-by: Will Harney <wharney@salesforce.com>

--- a/templates/ClientInstance.ts.hbs
+++ b/templates/ClientInstance.ts.hbs
@@ -58,7 +58,7 @@ export class {{capitalize metadata.specName}} extends BaseClient {
     super(config);
 
     if (!!!config.baseUri) {
-      this.clientConfig.baseUri = "{{getBaseUri apiModel}}";
+      this.clientConfig.baseUri = "{{getBaseUriFromDocument apiModel}}";
     }
 
   }
