Saving changes for demo

--- a/templates/ClientInstance.ts.hbs
+++ b/templates/ClientInstance.ts.hbs
@@ -3,7 +3,7 @@ import { StaticClient, BaseClient, ClientConfig, Response, ResponseError } from 
 import _ from "lodash";
 import { OperationOptions } from "retry";
 
-export namespace {{capitalize metadata.specName}} {
+export namespace {{name.lowerCamelCase}} {
   {{#each dataTypes}}
       {{#if (isTypeDefinition .)}}
       export type {{getValue name}} = {{> dtoPartial typeDto=.}}
@@ -40,7 +40,7 @@ export namespace {{capitalize metadata.specName}} {
 * };
 * token = await helpers.getShopperToken(clientConfig, { type: "guest" });
 * clientConfig.headers["authorization"] = token.getBearerHeader();
-* const {{metadata.specName}}Client = new {{pascalcase metadata.categories.[CC API Family].[0]}}.{{capitalize metadata.specName}}(clientConfig);
+* const {{name.UpperCamelCase}}Client = new {{pascalcase metadata.categories.[CC API Family].[0]}}.{{name.UpperCamelCase}}(clientConfig);
 * ```
 *
 * <span style="font-size:.7em; display:block; text-align: right">
@@ -53,16 +53,16 @@ export namespace {{capitalize metadata.specName}} {
 * 
 
 */
-export class {{capitalize metadata.specName}} extends BaseClient {
+export class {{name.UpperCamelCase}} extends BaseClient {
   constructor(config: ClientConfig) {
     super(config);
 
     if (!!!config.baseUri) {
-      this.clientConfig.baseUri = "{{getBaseUriFromDocument apiModel}}";
+      this.clientConfig.baseUri = "{{getBaseUriFromDocument model}}";
     }
 
   }
 
-  {{> operationsPartial model=.}}
+  {{> operationsPartial model}}
 
 }
