--- a/templates/helpers.ts.hbs
+++ b/templates/helpers.ts.hbs
@@ -1,13 +1,12 @@
-
 import { ShopperToken, stripBearer, ResponseError, getObjectFromResponse } from "@commerce-apps/core"
 import  * as sdk from "./"
 
 //type of the input parameter of auth function
-type AuthFuncParamType = Parameters<typeof sdk.{{shopperAuthClient}}.prototype.{{shopperAuthApi}}>[0];
+type AuthFuncParamType = Parameters<typeof sdk.{{metadata.shopperAuthClient}}.prototype.{{metadata.shopperAuthApi}}>[0];
 // get the type(s) wrapped inside the promise
 type Unpacked<T> = T extends Promise<infer U> ? U : T;
 // get the return type of shopperAuthApi 
-type CustomerReturnType = ReturnType<typeof sdk.{{shopperAuthClient}}.prototype.{{shopperAuthApi}}>;
+type CustomerReturnType = ReturnType<typeof sdk.{{metadata.shopperAuthClient}}.prototype.{{metadata.shopperAuthApi}}>;
 // get only the dto type by excluding the response type
 type CustomerType = Exclude<Unpacked<CustomerReturnType>, Response>
 
@@ -33,9 +32,9 @@ export async function getShopperToken (
     clientConfig: sdk.ClientConfig,
     body: AuthFuncParamType["body"]
 ): Promise<ShopperToken<CustomerType>>{
-    let client = new sdk.{{shopperAuthClient}}(clientConfig);
+    let client = new sdk.{{metadata.shopperAuthClient}}(clientConfig);
 
-    const response: Response = (await client.{{shopperAuthApi}}({body}, true));
+    const response: Response = (await client.{{metadata.shopperAuthApi}}({body}, true));
     if (!response.ok) {
         throw new ResponseError(response);
     }
