--- a/templates/index.ts.hbs
+++ b/templates/index.ts.hbs
@@ -1,5 +1,5 @@
 {{#each children}}
-import * as {{name.upperCamelCase}} from "./{{name.lowerCamelCase}}/{{name.lowerCamelCase}}";
+import * as {{name.upperCamelCase}} from "./{{name.lowerCamelCase}}";
 {{/each}}
 export {
 {{#each children}}
